--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <RootNamespace>Defender.ServiceTemplate.Application</RootNamespace>
-        <AssemblyName>Defender.ServiceTemplate.Application</AssemblyName>
+        <RootNamespace>Defender.BudgetTracker.Application</RootNamespace>
+        <AssemblyName>Defender.BudgetTracker.Application</AssemblyName>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
