--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <RootNamespace>Defender.ServiceTemplate.Domain</RootNamespace>
-        <AssemblyName>Defender.ServiceTemplate.Domain</AssemblyName>
+        <RootNamespace>Defender.BudgetTracker.Domain</RootNamespace>
+        <AssemblyName>Defender.BudgetTracker.Domain</AssemblyName>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
