--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <RootNamespace>Defender.ServiceTemplate.Infrastructure</RootNamespace>
-        <AssemblyName>Defender.ServiceTemplate.Infrastructure</AssemblyName>
+        <RootNamespace>Defender.BudgetTracker.Infrastructure</RootNamespace>
+        <AssemblyName>Defender.BudgetTracker.Infrastructure</AssemblyName>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
