--- a/src/WebApi/appsettings.Development.json
+++ b/src/WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "MongoDbOptions": {
-    "AppName": "Defender_ServiceTemplate",
+    "AppName": "Defender_BudgetTracker",
     "Environment": "dev"
   },
   "ServiceOptions": {
