--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ExchangeRatesApiOptions": {
+    "BaseUrl": "https://api.exchangeratesapi.io/v1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
